# pokedex-gen

./: .gitignore  BUGS.md  Cargo.toml  TODO.md
examples/: test.rs
pokerust/: Cargo.toml  LICENSE  README.md
pokerust/src/: cache.rs  client.rs  lib.rs  util.rs
pokerust/src/pokeapi/: berries.rs  contests.rs  encounters.rs  evolution.rs  games.rs  items.rs  locations.rs  machines.rs  mod.rs  moves.rs  pokemon.rs  resource_lists.rs  utility.rs
src/: entries.rs  images.rs  items.rs  lib.rs  main.rs  moves.rs  pokemon.rs
src/pokemon/: cry.rs  images.rs
