[package]
name = "pokedex-gen"
version = "0.3.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[features]
default = []

[dependencies]
anyhow = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
    "process",
] }
pokerust = { path = "./pokerust" }
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
image = { version = "0.23", default-features = false, features = ["png"] }
log = "0.4"
simple_logger = { version = "1", default-features = false }
ron = "0.6"
firecore-battle = { git = "https://github.com/DoNotDoughnut/firecore-battle", default-features = false }

[workspace]
members = ["pokerust"]
