[package]
name = "firecore-dex-gen"
version = "0.0.1"
authors = ["Rhys H <donotdoughnut99@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
pokerust = { path = "./pokerust" }
attohttpc = { version = "0.19", features = ["json"] }
serde = { version = "1", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
tempfile = "3"
rayon = "1"
firecore-battle = { version = "0.0.9", git = "https://github.com/fiirecore/battle", rev = "6ce5d00", default-features = false, features = [
    "default_engine",
] }
hashbrown = { version = "0.12", features = ["rayon", "serde"] }
enum-map = { version = "2.0", features = ["serde"] }

[dev-dependencies]
ron = "0.7"

[workspace]
members = ["pokerust"]
